CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-28 22:37:45
+lastsearch = 2024-07-28 22:45:10
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,9 +92,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html
+match = 20.0%%
+title = Chiếu lác D2 10 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOoreN5CfA69kAGnyEKj3bPYssQHjqVn5RikTXDGnoNr-zzcM6veG
 
 [visana.vn]
 match = -240.0%%
@@ -289,7 +289,7 @@ url = https://rentapartment.vn/vietnam-zip-postal-code/
 [alphardaudio.us]
 match = -100.0%%
 title = Machete ML-10S D2 10" 600W MAX Subwoofer
-url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer
+url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer?srsltid=AfmBOor1pVHX8dfYv6RYRSzNKOL4mn8Kp3z0Rvo12bPcf7KHgrMsERuR
 
 [www.handspan.com]
 match = -126.7%%
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOoqK6GbmS40F06WIV-lAzBoCgvbJ7NgDAmH2v8_DKT3bZnp_R_sa
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
