--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-28 20:18:27
+lastsearch = 2024-07-28 22:53:45
 
 [screenrant.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
-url = https://www.uscis.gov/forms/explore-my-options
+match = -114.3%%
+title = About the EB-5 Visa Classification
+url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -82,14 +82,14 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
-match = 7.1%%
-title = The Mask (1994)
-url = https://www.imdb.com/title/tt0110475/
+match = 0.0%%
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.boundless.com]
 match = -128.6%%
@@ -445,4 +445,9 @@ url = https://www.labattusa.com/
 match = 0.0%%
 title = 
 url = https://www.wantavisa.com/processing-times.php
+
+[savageuniversal.com]
+match = 0.0%%
+title = 
+url = https://savageuniversal.com/us-en/blog/the-green-screen-alternative-black-gray-and-white/
 
