--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-28 17:40:35
+lastsearch = 2024-07-28 22:53:05
 
 [www.kymdan.com]
-match = -333.3%%
-title = Kymdan
-url = https://www.kymdan.com/home.do?lang=en
+match = 4.2%%
+title = Bộ ga trải giường Kymdan
+url = https://www.kymdan.com/danh-muc/drap-trai-giuong
 
 [thegioidemviet.vn]
 match = 0.0%%
@@ -110,4 +110,9 @@ url = https://thegioinem.com/bo-chan-ga-kim-cuong-tencel-lua-maris-2106.html
 match = -25.0%%
 title = Bộ chăn ga gối Tencel Dreamtex DTF-004 - Nệm Tuan Thao
 url = https://everonthuduc.vn/san-pham/bo-chan-ga-goi-tencel-dreamtex-dtf-004/
+
+[khodem.vn]
+match = -3.1%%
+title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương
+url = https://khodem.vn/bo-chan-ga-goi-chun-chan-tencel-maris-kim-cuong/
 
