--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-28 17:47:36
+lastsearch = 2024-07-28 22:48:15
 
 [www.muji.com]
 match = 7.1%%
@@ -47,9 +47,9 @@ title = Chăn lông cừu Muji thương hiệu số 1 Nhật Bản - Coda
 url = https://coda.io/@hoang-quang-tuyen/chan-long-cuu-muji-thuong-hieu-so-1-nhat-ban
 
 [shopee.vn]
-match = -171.4%%
-title = Chăn Lông Tuyết Muji Siêu Mềm Mịn, Chăn Lông Cao Cấp
-url = https://shopee.vn/Chăn-Lông-Tuyết-Muji-Siêu-Mềm-Mịn-Chăn-Lông-Cao-Cấp-i.494586166.11657795603
+match = 28.6%%
+title = Chăn Lông Nhung Xám MUJI
+url = https://shopee.vn/Chăn-Lông-Nhung-Xám-MUJI-i.601622525.12174454922
 
 [changagoidemdep.vn]
 match = 35.7%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware?srsltid=AfmBOoo3EqXlX-GIlHWrTUPQVGxBNv7gvi_69icn801M0MPtsmQJ7hOQ
+url = https://www.muji.us/collections/tableware
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoq1YAENZbzfH25Mj114IGkkTt3KDDh0zuYtfVmF1I-ogfGlW0mr
+url = https://www.lazada.vn/tag/chan-long-muji/
 
 [sugoimart.com]
 match = -257.1%%
