--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-28 20:46:28
+lastsearch = 2024-07-28 22:44:07
 
 [www.diepxuan.com]
 match = 0.0%%
-title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html?srsltid=AfmBOooQahPEQEhS_Wzh0DsS8ki2mm6g6mWxBuy25SI98hLPGDUWOqgA
+title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
