--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-28 17:48:38
+lastsearch = 2024-07-28 22:57:31
 
 [www.georgianicols.com]
-match = -192.3%%
-title = Daily Horoscope for Saturday, July 27, 2024
+match = -169.2%%
+title = Daily Horoscope for Sunday, July 28, 2024
 url = https://www.georgianicols.com/daily/
 
 [www.galottery.com]
@@ -37,9 +37,9 @@ title = 3:16 Healthcare | Bremen GA
 url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -338.5%%
-title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
-url = https://www.youtube.com/watch?v=wwH3mdjbKac
+match = -146.2%%
+title = The Gummy Bear Song - Long English Version
+url = https://www.youtube.com/watch?v=astISOttCQ0
 
 [www.regmovies.com]
 match = -215.4%%
