--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-28 15:16:58
+lastsearch = 2024-07-28 22:48:57
 
 [everonvn.com.vn]
-match = -114.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity ...
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPM19043 180x200
-url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -66.7%%
-title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
-url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
+match = -123.8%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
+url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
 match = -61.9%%
