--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-28 20:48:29
+lastsearch = 2024-07-28 22:45:29
 
 [en.wikipedia.org]
-match = -50.0%%
-title = Park Chung Hee
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+match = 0.0%%
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = -30.4%%
