--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-28 22:58:13
+lastsearch = 2024-07-28 23:15:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Thảm chân len xù 1 50x80
 url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 
 [tiki.vn]
-match = -41.7%%
-title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham chui chan 60x80
+match = -79.2%%
+title = Mua thảm chùi trân,thảm lau chân lông mềm siêu hút hàng ...
+url = https://tiki.vn/tham-chui-trantham-lau-chan-long-mem-sieu-hut-hang-nhap-khau-cao-cap-2-co-mau-gi-xamtham-gi-to-50x80-p242108302.html?spid=242108309
 
 [shopee.vn]
 match = -12.5%%
