CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-28 22:22:20
+lastsearch = 2024-07-28 23:46:02
 
 [silverwow.net]
 match = -255.6%%
@@ -64,7 +64,7 @@ url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B0
 [unistrutohio.com]
 match = -466.7%%
 title = Unistrut P1001 - 1-5/8" x 3-1/4", 12 Gauge Back-to- ...
-url = https://unistrutohio.com/products/p1001?srsltid=AfmBOookbRqxzC6_8kMRTmJCQi6Z6ZjOa1HEAZg96hN9riByvc_BUkNi
+url = https://unistrutohio.com/products/p1001
 
 [scholar.google.co.uk]
 match = 0.0%%
@@ -219,7 +219,7 @@ url = https://www.itshot.com/jewelry/education-guides/strongest-chains
 [mightydepot.com]
 match = -377.8%%
 title = Chung John Wong Sun Chan pepper 3kg Korean food ...
-url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_?srsltid=AfmBOoq6PYZp2wioKE75u4CATqb7TChmJ8HfYp4G3m1DtHWCfblVWYmn
+url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_
 
 [s.click.aliexpress.com]
 match = -444.4%%
