--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-28 21:46:34
+lastsearch = 2024-07-28 23:40:06
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -57,14 +57,14 @@ title = Scholarly articles for chieu lac soc 16
 url = https://scholar.google.com/scholar?q=chieu+lac+soc+16&hl=en&as_sdt=0&as_vis=1&oi=scholart
 
 [moveek.com]
-match = -200.0%%
-title = Rạp Galaxy Kinh Dương Vương - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/galaxy-kinh-duong-vuong/
+match = -175.0%%
+title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-kien-giang/
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
 match = -106.2%%
