--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-28 22:44:27
+lastsearch = 2024-07-28 23:46:45
 
 [shopee.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = 31.0%%
-title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
-url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
+match = -51.7%%
+title = Bán buôn bán lẻ các loại chiếu nhựa... - Chiếu Trúc Việt Nam
+url = https://www.facebook.com/chieutruc.vn/posts/bán-buôn-bán-lẻ-các-loại-chiếu-nhựa-đủ-các-kích-thước-80cm-90cm-1m-1m2-1m5-1m6-1/246703009025205/
 
 [www.sendo.vn]
 match = 0.0%%
@@ -140,4 +140,9 @@ url = https://dbnd.daklak.gov.vn/CMS/Content/KHÓA IX/KH THỨ 8/DL_20_NQ-HDND_1
 match = -72.4%%
 title = tuyenptm-12/06/2023 10:14:24-tuyenptm-tuyenptm-tuyenptm
 url = https://dbnd.danang.gov.vn/Files/Documents/2023/1. Đính kèm CV 5863 UBND thành phố.PDF
+
+[media.techcombank.com]
+match = -20.7%%
+title = Danh sách mã dự thưởng Chương trình ưu đãi hè 2023
+url = https://media.techcombank.com/uploads/Danh-sach-ma-quay-thuong-Thang-7-7d5bc61d38.pdf
 
