--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-28 22:47:35
+lastsearch = 2024-07-28 23:35:52
 
 [shopee.vn]
 match = -73.9%%
@@ -27,14 +27,14 @@ title = Cơ Sở Sản Xuất Chiếu Thái Bình
 url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai-binh.html
 
 [www.lazada.vn]
-match = -26.1%%
-title = Chiếu Cói ❤️FREESHIP❤️Chiếu Thái Bình In Hoa 0,8/ ...
-url = https://www.lazada.vn/products/chieu-coi-freeshipchieu-thai-binh-in-hoa-081m21m51m61m82m2-i2001525909.html
+match = -21.7%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.8 m x 2 m
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-18-m-x-2-m-i813838027.html
 
 [www.sendo.vn]
-match = 30.4%%
-title = Chiếu nhựa thái bình 1m x 1m9 - chieu
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [www.facebook.com]
 match = -30.4%%
