--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-28 22:26:13
+lastsearch = 2024-07-29 00:22:08
 
 [tiki.vn]
 match = 16.0%%
@@ -17,9 +17,9 @@ title = Cách Xem Lịch Chiếu Film Tại Taiwan
 url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
 match = 0.0%%
@@ -42,14 +42,14 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -44.0%%
-title = Chiến sĩ Cộng Hòa - Page 12 - Google Books Result
-url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=PA12&lpg=PA12&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=p30RRL3XPt&sig=ACfU3U2cMbuWl44sF3-qzrJskkgTFIAUKw&hl=en&sa=X&ved=2ahUKEwjCuKzrhcqHAxV5weYEHQUzFS4Q6AF6BAgZEAM
+match = -248.0%%
+title = 越南人開始學中文: 12主題、1000單字、400例句，從零基礎到開口說
+url = https://books.google.com/books?id=rWDZEAAAQBAJ&pg=PA5&lpg=PA5&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Llcsj5N6jE&sig=ACfU3U0_-ObxbzsNb4efGYFzZ77TUJ8YNA&hl=en&sa=X&ved=2ahUKEwi00vLfn8qHAxWWElkFHYnyLfQQ6AF6BAgaEAM
 
 [www.skyscanner.com.vn]
-match = -60.0%%
-title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
-url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
+match = -52.0%%
+title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Đà Nẵng
+url = https://www.skyscanner.com.vn/routes/tpe/dad/taipei-taiwan-taoyuan-to-đa-nang.html
 
 [www.bestprice.vn]
 match = -80.0%%
