--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-28 20:11:22
+lastsearch = 2024-07-29 00:24:17
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -44,12 +44,12 @@ url = https://nemhana.com/ga-chun/
 [demxanh.com]
 match = 4.0%%
 title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html?srsltid=AfmBOoo926-SUVzdN2aVBMqImBcIeMwF4i4EHhh-w5N0vTGykm6S7cnz
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
 
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOop8mQTuST-2ug2YGXzDO1vEEhmxYbaBspBy4df1S8K6LS1pxppS
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
