--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-28 23:33:07
+lastsearch = 2024-07-29 00:13:31
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPM19043 180x200
-url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
+match = -66.7%%
+title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -119.0%%
-title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
-url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
+match = -28.6%%
+title = Lịch sử giá Bộ ga phủ everon esm-21012
+url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
 
 [beecost.vn]
 match = -61.9%%
