CI images update

--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-28 11:42:10
+lastsearch = 2024-07-29 00:38:07
 
 [www.diepxuan.com]
 match = 40.9%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOoq3C-fPZ3UajJeILvg8gakx2yyP5rAZzRt_Nzglcaffy8Gm1Y-8
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -17,13 +17,13 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -86.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/?srsltid=AfmBOopDBUwLLDxwsKFlRdQI5OKs9UWM8gnnz0gk4f94_DBxP97m_PFA
+match = -36.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -104.5%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+match = -50.0%%
+title = Thảm tròn trải chân giường trong phòng ngủ ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
