--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-28 22:17:45
+lastsearch = 2024-07-29 00:34:58
 
 [shopee.vn]
-match = 35.3%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -2.9%%
+title = Chiếu điều hòa cao su non Latex Thái Lan vải lụa Tencel ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-Latex-Thái-Lan-vải-lụa-Tencel-mịn-mát-hàng-loại-1-êm-ái-thoáng-mát-giải-nhiệt-mùa-hè-i.240825360.8533242025
 
 [olbedding.com]
 match = 11.8%%
