--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-29 00:25:02
+lastsearch = 2024-07-29 00:30:44
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxVFa2yX&sig=ACfU3U2nlkZSAoCbnp4pZSDqLMc9hStBow&hl=en&sa=X&ved=2ahUKEwjTwMuyoMqHAxV0EFkFHa7uC0sQ6AF6BAgZEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxVFa5C_&sig=ACfU3U0TvPMoQLAHeY-nDPWsUcOmkKem9Q&hl=en&sa=X&ved=2ahUKEwi7iOTVocqHAxVWD1kFHS-fHC8Q6AF6BAgXEAM
 
 [ottawabraves.com]
 match = -292.3%%
