--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-07-28 22:27:57
+lastsearch = 2024-07-29 00:42:11
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -49,7 +49,7 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 [demxanh.com]
 match = -135.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Elan khuyến mại năm ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-elan-2021.html?srsltid=AfmBOooMSJe9BV45VXLCccdf41N86ttUpzAuCRIC2wAaTBoATcTFWYGn
+url = https://demxanh.com/bang-gia-dem-bong-ep-elan-2021.html
 
 [thegioidemonline.com]
 match = -40.0%%
