--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-28 23:35:31
+lastsearch = 2024-07-29 00:41:29
 
 [everon.vip]
 match = -10.0%%
@@ -42,8 +42,8 @@ title = Đệm bông ép everon 160 x 200 x 15 cm hàng chính hãng, ...
 url = https://tiki.vn/search?q=đệm bông ép everon 160 x 200 x 15 cm
 
 [demqueensweet.com]
-match = -57.1%%
-title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
+match = -119.0%%
+title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
 url = https://demqueensweet.com/
 
 [everon365.vn]
@@ -92,8 +92,8 @@ title = Nệm everon giá rẻ khuyến mãi kèm nhiều quà tặng tại TP .
 url = https://noithatken.com/nem/nem-everon/
 
 [everonvietnam.com]
-match = -128.6%%
-title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & ...
+match = -152.4%%
+title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/kich-co/160-x-200/page/32/
 
 [nem.vn]
