CI images update

--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-28 21:20:31
+lastsearch = 2024-07-29 00:44:45
 
 [everon.online]
 match = 50.0%%
@@ -13,8 +13,8 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESM-22014 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esm22014.html
+title = Everon EPM-24060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
 
 [nem.vn]
 match = 5.9%%
@@ -29,7 +29,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [vuanem.com]
 match = 17.6%%
 title = Bộ ga chun chần bốn mùa Everon 4 chi tiết màu ESM23012
-url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html
+url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html?srsltid=AfmBOopBxcaGtXp__xr7yBchtaKD7o95JEODUc5uagSz-Gtb5zyk7vHr
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -64,7 +64,7 @@ url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
 [jysk.vn]
 match = -26.5%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp | JYSK
-url = https://jysk.vn/ga-chun-140x200cm
+url = https://jysk.vn/ga-chun-140x200cm?srsltid=AfmBOopaGySJqTQss9ev_fSvmuGLsfWLnitXxfviN76amicwAleLc-OM
 
 [anpha.vuanem.com]
 match = 0.0%%
