--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-29 00:22:08
+lastsearch = 2024-07-29 00:50:39
 
 [tiki.vn]
 match = 16.0%%
@@ -44,7 +44,7 @@ url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 [books.google.com]
 match = -248.0%%
 title = 越南人開始學中文: 12主題、1000單字、400例句，從零基礎到開口說
-url = https://books.google.com/books?id=rWDZEAAAQBAJ&pg=PA5&lpg=PA5&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Llcsj5N6jE&sig=ACfU3U0_-ObxbzsNb4efGYFzZ77TUJ8YNA&hl=en&sa=X&ved=2ahUKEwi00vLfn8qHAxWWElkFHYnyLfQQ6AF6BAgaEAM
+url = https://books.google.com/books?id=rWDZEAAAQBAJ&pg=PA5&lpg=PA5&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Llcsj5P3lv&sig=ACfU3U1jcWLcMJpuBYMY9gU7QCrHU9SScA&hl=en&sa=X&ved=2ahUKEwjM_tePpsqHAxVNg4kEHadhGB4Q6AF6BAgYEAM
 
 [www.skyscanner.com.vn]
 match = -52.0%%
@@ -54,7 +54,7 @@ url = https://www.skyscanner.com.vn/routes/tpe/dad/taipei-taiwan-taoyuan-to-đa-
 [www.bestprice.vn]
 match = -80.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất hôm nay
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOorqpxHb4F-3sCrGbg2dBLjSQVYBrfklL9FAreQCjckUULEytMc6
 
 [www.traveloka.com]
 match = -96.0%%
