--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-28 18:31:07
+lastsearch = 2024-07-29 00:55:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -240.0%%
+title = Cơ sở thứ 6 Celadon Sports & Resort số 2, đường D2 , Sơn ...
+url = https://www.facebook.com/TheDucBangTamPhatTrienChieuCaoVaTheLucChoTreEm/videos/cơ-sở-thứ-6-celadon-sports-resort-số-2-đường-d2-sơn-kỳ-tân-phú-bố-mẹ-có-thể-đưa-/1798013050339107/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -97,9 +97,9 @@ title = D2 - Phát Triển Người Lãnh Đạo - Mục Sư Brian Houston
 url = https://quangharvest.com/isom-khoa-cap-4/d2-phat-trien-nguoi-lanh-dao-developing-leaders
 
 [www.youtube.com]
-match = -220.0%%
-title = Tận 15 năm chơi game tôi mới biết Assassin đã như vậy ...
-url = https://www.youtube.com/watch?v=xrU9hh7M6js
+match = -186.7%%
+title = TỔNG HỢP 15 MÓN NGON “ĐỨNG ĐẦU” CÁC QUẬN Ở SÀI ...
+url = https://www.youtube.com/watch?v=azJaFE1_w_k
 
 [rentapartment.vn]
 match = -153.3%%
