CI images update

--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-28 22:57:52
+lastsearch = 2024-07-29 01:21:08
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -62,9 +62,9 @@ title = Di tích lịch sử Rạch gầm - Xoài mút
 url = https://svhttdl.tiengiang.gov.vn/di-tich-lich-su/-/asset_publisher/wxIoUS9QiA4e/content/di-tich-lich-su-rach-gam-xoai-mut
 
 [www.youtube.com]
-match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+match = -212.5%%
+title = Tàu SE11 chở hơn 400 hành khách trật bánh khi sắp vượt ...
+url = https://www.youtube.com/watch?v=9SsYXW-55Y4
 
 [lienminhhtxhaiphong.org.vn]
 match = -25.0%%
@@ -314,7 +314,7 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOopbPNS2SbrxfowNo1ouSoP6LmGJ6p4KY6MRLsW2qLBzpcAsJ9TU
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
 
 [yato.vn]
 match = -175.0%%
