--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-28 22:30:54
+lastsearch = 2024-07-29 01:28:51
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -170.6%%
-title = Florida HOA. Are HOAs still able to enter properties ...
-url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
+match = -188.2%%
+title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
+url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
-match = -141.2%%
-title = anyone know how to find who the HOA president is? ...
-url = https://www.reddit.com/r/fuckHOA/comments/10lkjnf/anyone_know_how_to_find_who_the_hoa_president_is/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [spectrumam.com]
 match = -76.5%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -200.0%%
-title = My neighbor is constantly doing things that violate our HOA ...
-url = https://www.quora.com/My-neighbor-is-constantly-doing-things-that-violate-our-HOA-agreement-what-can-I-do
+match = -176.5%%
+title = Can my HOA fine me if they haven't explained what I've ...
+url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
 
 [www.hopb.co]
 match = -141.2%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -82.4%%
-title = I need advice #lawyer #hoa #taylorswift
-url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
+match = -41.2%%
+title = HOA fined me for this #hoa | hoa
+url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
 
 [www.steadily.com]
 match = 0.0%%
