--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-28 22:49:18
+lastsearch = 2024-07-29 01:29:12
 
 [tiki.vn]
 match = -138.9%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
-match = 50.0%%
-title = Kích thước 160x200
-url = http://nemxinh.net/filter/chan-ga+160x200
+match = -144.4%%
+title = Bộ Chăn Drap Gối Cao Cấp Bọc Màu Thêu (vỏ chăn) – Xám
+url = http://nemxinh.net/bo-chan-drap-goi-cao-cap-boc-mau-theu-vo-chan-xam-p67.html
 
 [www.everonvn.vn]
 match = -188.9%%
@@ -32,19 +32,19 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 753 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-753-chinh-hang-cao-cap
+match = -72.2%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -77.8%%
 title = Bộ ga chun Cotton chống thấm màu xanh ngọc
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html?srsltid=AfmBOoofsT1X3TkhScUvtD3p1pqxYOiReOD8n95Ec4DXGGzIot-j1WRw
 
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOooD5kXCoESrGEjmCV25q3MFUV5F2W4RJifBHwVyLVZAhvdqAHCE
 
 [aeoneshop.com]
 match = -105.6%%
