--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-07-29 00:18:20
+lastsearch = 2024-07-29 01:18:43
 
 [demxanh.com]
 match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+title = Chiếu điều hòa cao su non màu xanh lục bảo
+url = https://demxanh.com/chieu-cao-su-non-mau-xanh-luc-bao.html
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [demchinhhang.com]
 match = -20.7%%
@@ -27,14 +27,14 @@ title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá t
 url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
 
 [changagoidemdep.vn]
-match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel hồng đất - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-hong-dat.html
+match = -10.3%%
+title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [thegioidemonline.com]
 match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+title = Chiếu điều hòa cao su non Tencel Xanh biển
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [khodem.vn]
 match = 55.2%%
