--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-28 21:26:47
+lastsearch = 2024-07-29 01:31:19
 
 [demxanh.com]
 match = 24.1%%
@@ -18,8 +18,8 @@ url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-
 
 [www.lazada.vn]
 match = -17.2%%
-title = chiếu điều hòa cao su non 5d mềm mịn thoáng mát hàng ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-5d-mem-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1916363851.html
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [tiki.vn]
 match = 20.7%%
@@ -59,7 +59,7 @@ url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 [www.diepxuan.com]
 match = 31.0%%
 title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html?srsltid=AfmBOoqnKz7ZDCkbvj7SfseCMw_XR3t3ehlBUBB0A5Djvtbe3u-FfUAL
+url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
 
 [chiaki.vn]
 match = 10.3%%
