--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-29 00:43:31
+lastsearch = 2024-07-29 01:24:35
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -22.6%%
-title = Ga chống thấm Hilton Cotton cao cấp CTHT01 | Khuyến mãi
-url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html
+match = 25.8%%
+title = Ga chống thấm Olympia cotton cao cấp mới
+url = https://demxanh.com/ga-chong-tham-olympia-cotton-cao-cap-moi.html
 
 [dreamland.vn]
 match = -21.1%%
