--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-28 18:49:13
+lastsearch = 2024-07-29 01:26:46
 
 [thefelix.vn]
 match = -50.0%%
@@ -87,9 +87,9 @@ title =
 url = https://nemtotgiare.com/san-pham/nem-cao-su-tong-hop-8
 
 [nem.vn]
-match = 15.8%%
-title = Nệm cao su thiên nhiên chính hãng, giá tốt - Giảm giá 20
-url = https://nem.vn/nem-cao-su-thien-nhien-gia-re
+match = 0.0%%
+title = 
+url = https://nem.vn/nem-cao-su-thien-nhien-thang-loi
 
 [nemtrungson.vn]
 match = 65.8%%
