CI images update

--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-29 00:12:51
+lastsearch = 2024-07-29 01:45:25
 
 [demxanh.com]
 match = -3.3%%
@@ -33,8 +33,8 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [demviethome.vn]
 match = 26.7%%
-title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
+title = Chiếu điều hòa latex C09 giá rẻ hà nội. ...
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c09/
 
 [www.dienmayxanh.com]
 match = -36.7%%
@@ -87,9 +87,9 @@ title = Chiếu điều hòa: Bóc mẽ sự thật
 url = https://shoptretho.com.vn/tin-tuc/chieu-dieu-hoa-boc-me-su-that
 
 [www.youtube.com]
-match = -40.0%%
-title = Các chị bán hàng online bảo chiếu điều hòa nằm mát lắm ...
-url = https://www.youtube.com/watch?v=a8BE2eDtn3Y
+match = -26.7%%
+title = HÀNG GIẢM GIÁ - Chiếu điều hòa nhật 2 mặt - nằm êm ngủ ...
+url = https://www.youtube.com/watch?v=fhwNXjU32Ww
 
 [vtvhyundai.vn]
 match = -6.7%%
