--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-29 00:15:15
+lastsearch = 2024-07-29 01:49:50
 
 [demxanh.com]
 match = -135.3%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
 url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [thegioidemtot.vn]
-match = 46.2%%
-title = Chiếu Hạt Đen
-url = https://thegioidemtot.vn/dt17327-chieu-hat-den.html
+match = -58.8%%
+title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
+url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [demre.com.vn]
 match = 35.3%%
