--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-28 17:56:38
+lastsearch = 2024-07-29 01:48:29
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -44,11 +44,11 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOop6gcNawXAsDecYM5Rqk98QY8tckJaU9djYTK18rBAAstN2s7ge
+url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
-match = -130.0%%
-title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
+match = -65.0%%
+title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
 url = https://demqueensweet.com/
 
 [www.lazada.vn]
@@ -59,7 +59,7 @@ url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop67XdJrBTvFRr0IbcsBxIeRHlVhaV4RF9IologRhCDbREuWcUw
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
 
 [www.diepxuan.com]
 match = 0.0%%
