--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-29 01:32:44
+lastsearch = 2024-07-29 02:01:12
 
 [www.reddit.com]
 match = -82.6%%
@@ -525,4 +525,9 @@ url = https://horizon.documentation.ird.fr/exl-doc/pleins_textes/divers19-04/343
 match = -162.5%%
 title = Catalogs
 url = https://files.eric.ed.gov/fulltext/ED112652.pdf
+
+[overseas.mofa.go.kr]
+match = 0.0%%
+title = 
+url = https://overseas.mofa.go.kr/no-en/brd/m_21237/view.do?seq=33
 
