--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-28 18:54:46
+lastsearch = 2024-07-29 02:13:58
 
 [www.instagram.com]
-match = -223.1%%
-title = Yuki Hoi (@hoisoki) • Instagram photos and videos
-url = https://www.instagram.com/hoisoki/?hl=en
+match = -246.2%%
+title = Yuki Chan (@yukichan_la) • Instagram photos and videos
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = -192.3%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 7.7%%
-title = Yuki-Chan Cosplay
-url = https://www.facebook.com/YukiChansp/
+match = 33.3%%
+title = Yuk Hoi Chan
+url = https://www.facebook.com/hoihihoi/
 
 [happypaca.tumblr.com]
 match = -276.9%%
