--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-29 01:45:25
+lastsearch = 2024-07-29 02:17:42
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 33.3%%
+title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -33,8 +33,8 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [demviethome.vn]
 match = 26.7%%
-title = Chiếu điều hòa latex C09 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c09/
+title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 
 [www.dienmayxanh.com]
 match = -36.7%%
