--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-29 01:45:34
+lastsearch = 2024-07-29 02:18:43
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCpcyqql&sig=ACfU3U3xnpvrBS_V-8brDJdjAnTtCw5O-g&hl=en&sa=X&ved=2ahUKEwjvrt2yssqHAxX1MlkFHS3SB9MQ6AF6BAgcEAM
+match = -142.9%%
+title = A critical pronouncing dictionary. With a suppl., by E. Smith
+url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvlddIz4S&sig=ACfU3U0XsgeIZZlL2CQ-dbWCXykWrN8qyw&hl=en&sa=X&ved=2ahUKEwjCuPTmucqHAxWqFlkFHQnsM-wQ6AF6BAhBEAM
 
 [www.diepxuan.com]
 match = -81.0%%
