CI images update

--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-07-29 01:49:04
+lastsearch = 2024-07-29 02:28:27
 
 [dvan.org]
 match = -41.7%%
@@ -200,4 +200,9 @@ url = https://doptcirculars.nic.in/OM/ViewOM.aspx?id=279&headid=14
 match = -275.0%%
 title = Gấu Bông Gối Ôm Miniso Giá Rẻ Cao Cấp Dễ Thương Khổng ...
 url = https://vuongquocgaubong.com/san-pham/gau-bong-goi-om-miniso-gia-re-cao-cap-de-thuong-khong-lo/
+
+[depwd.gov.in]
+match = -316.7%%
+title = Department of Empowerment of Persons with Disabilities ...
+url = https://depwd.gov.in/
 
