--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-28 23:46:41
+lastsearch = 2024-07-29 02:40:05
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -135.0%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -87,9 +87,9 @@ title = WazirX Hacker Converts Majority of Stolen Assets into Ether
 url = https://cryptonews.com/news/wazirx-hacker-converts-majority-of-stolen-assets-into-ether.htm
 
 [www.thespike.gg]
-match = -95.0%%
-title = Mir Gaming GC vs SGA InCheon | VALORANT Game ...
-url = https://www.thespike.gg/br/match/mir-gaming-gc-sga-incheon/120557
+match = -75.0%%
+title = Sin Prisa Gaming vs Nongshim RedForce | VCL
+url = https://www.thespike.gg/br/match/sin-prisa-gaming-nongshim-redforce/120057
 
 [br.ign.com]
 match = -60.0%%
@@ -164,7 +164,7 @@ url = https://cnrk.cnic.navy.mil/
 [books.google.com]
 match = -180.0%%
 title = The Japan Daily Mail - Volume 34 - Page 194 - Google Books Result
-url = https://books.google.com/books?id=Zm0zAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=38NC8YxhNh&sig=ACfU3U0vzuEbA2FejVM4bOgfk5X4iGJwfQ&hl=en&sa=X&ved=2ahUKEwiFupXP9cmHAxVCFlkFHXuPMgMQ6AF6BAgtEAM
+url = https://books.google.com/books?id=Zm0zAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=38NC8_wnLm&sig=ACfU3U224kYEBVjMF7iVl8qLp-5p25nohQ&hl=en&sa=X&ved=2ahUKEwjA2KzKvsqHAxUlFVkFHX7kFn0Q6AF6BAgfEAM
 
 [strandedonpeel.my-free.website]
 match = -45.0%%
@@ -407,9 +407,9 @@ title = Securities and Exchange Commission: Home - SEC
 url = https://www.sec.gov.ph/
 
 [8tharmy.korea.army.mil]
-match = -175.0%%
-title = The Official Home Page of the Eighth Army - Eighth Army | The ...
-url = https://8tharmy.korea.army.mil/site/index.asp
+match = -145.0%%
+title = The Official Home Page of the Korean Service Corps Battalion
+url = https://8tharmy.korea.army.mil/ksc/
 
 [www.google.com]
 match = 0.0%%
