--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-28 17:31:05
+lastsearch = 2024-07-29 02:40:24
 
 [shopee.vn]
-match = -666.7%%
-title = 1/4
-url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
+match = -43.5%%
+title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
+url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -42,9 +42,9 @@ title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
 url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [baocaobang.vn]
-match = -8.7%%
-title = Tin cảnh báo mưa lớn ở tỉnh Cao Bằng
-url = https://baocaobang.vn/tin-canh-bao-mua-lon-o-tinh-cao-bang-3170951.html
+match = -43.5%%
+title = Chiếu trúc Cao Sơn – sản phẩm Việt được tin dùng
+url = https://baocaobang.vn/chieu-truc-cao-son-san-pham-viet-duoc-tin-dung-42036.html
 
 [chieu.com.vn]
 match = 52.6%%
@@ -68,8 +68,8 @@ url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu
 
 [www.facebook.com]
 match = 21.7%%
-title = CAO BẰNG HÓNG | Cao Bang
-url = https://www.facebook.com/caobanghong/?locale=vi_VN
+title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieutruccaobangcbg/
 
 [www.youtube.com]
 match = -95.7%%
