--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-28 23:46:45
+lastsearch = 2024-07-29 02:29:29
 
 [shopee.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = -51.7%%
-title = Bán buôn bán lẻ các loại chiếu nhựa... - Chiếu Trúc Việt Nam
-url = https://www.facebook.com/chieutruc.vn/posts/bán-buôn-bán-lẻ-các-loại-chiếu-nhựa-đủ-các-kích-thước-80cm-90cm-1m-1m2-1m5-1m6-1/246703009025205/
+match = 31.0%%
+title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
+url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
 match = 0.0%%
