--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-29 01:37:28
+lastsearch = 2024-07-29 02:25:47
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -44,12 +44,12 @@ url = https://nemhana.com/ga-chun/
 [demxanh.com]
 match = 4.0%%
 title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html?srsltid=AfmBOopIOweHH-MQvZ22QHk8IW_QHQ_RF2fpcUiWCnaWXw66-LkMyDBV
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
 
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOopGRVFEMO_dtr3neBq4Dcb3aQakv85JhdBKNgrw_KtHNe6r5Nq8
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
