--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -145.0%%
-title = Stem cell-based multi-tissue platforms to model human ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9587366/
+match = -115.0%%
+title = Therapy and Cardiovascular Toxicity in Cancer - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6028047/
 
 [www.energy.gov]
 match = -95.0%%
@@ -102,9 +102,9 @@ title = SAN DIEGO COUNTY TREASURER- ...
 url = https://www.sdttc.com/content/dam/ttc/docs/taxcollection/returned-tax-bills.pdf
 
 [profiles.ucla.edu]
-match = -46.2%%
-title = Jerome Rotter
-url = https://profiles.ucla.edu/jerome.rotter
+match = 0.0%%
+title = Stanley F Nelson
+url = https://profiles.ucla.edu/stanley.nelson
 
 [biodora-gardens.my-free.website]
 match = -130.0%%
