--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-28 20:52:12
+lastsearch = 2024-07-29 02:38:21
 
 [fsapartners.ed.gov]
 match = -45.0%%
 title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2023-04/2324FedSchoolCodeListQ3.pdf
+url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
 
 [finaid.org]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -10.0%%
+title = Anders Dale - UCSD Profiles
+url = https://profiles.ucsd.edu/anders.dale
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 0.0%%
-title = Jennifer Puck, MD
-url = https://profiles.ucsf.edu/jennifer.puck
+match = 11.1%%
+title = Marina Sirota, PhD
+url = https://profiles.ucsf.edu/marina.sirota
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -113,8 +113,8 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 
 [cases.stretto.com]
 match = -90.0%%
-title = Case 23-10984 Doc 1 Filed 07/26/23 Page 1 of 260
-url = https://cases.stretto.com/public/x267/12378/PLEADINGS/1237807262380000000046.pdf
+title = Case 23-10988 Doc 1 Filed 07/26/23 Page 1 of 260
+url = https://cases.stretto.com/public/x267/12380/PLEADINGS/1238007262380000000051.pdf
 
 [www.west-cs.com]
 match = -100.0%%
@@ -400,4 +400,9 @@ url = https://www.elso.org/membership/centerdirectory.aspx
 match = -111.1%%
 title = Attendees
 url = https://archive.cps-vo.org/group/cps-pimtg18/attendees
+
+[profiles.icts.uci.edu]
+match = -38.5%%
+title = Jaime Landman
+url = https://profiles.icts.uci.edu/jaime.landman
 
