--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-29 02:19:25
 [www.diepxuan.com]
 match = -19.0%%
 title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html?srsltid=AfmBOoqOzSQOK1cgyBtnRgiFOw9V-41A5PuoJAHrN2Tic4uNb8WFZ4iN
 
 [tiki.vn]
 match = -81.0%%
