--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-29 01:25:18
+lastsearch = 2024-07-29 03:21:42
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -250.0%%
-title = Low-budget GREEN SCREEN at home | What gives the best ...
-url = https://www.youtube.com/watch?v=axwpepx1FTw
+match = -185.7%%
+title = HƯỚNG DẪN CÁCH PHỤC HỒI THẺ XANH SAU KHIỞ VIỆT ...
+url = https://www.youtube.com/watch?v=3ycihnhaARo
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -114.3%%
-title = About the EB-5 Visa Classification
-url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
+match = -7.1%%
+title = Explore my Options
+url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -63,8 +63,8 @@ url = https://www.greenplan.gov.sg/
 
 [www.dienmayxanh.com]
 match = -242.9%%
-title = Top 10 tivi giá rẻ dưới 8 triệu đáng mua nhất 2024 tại ...
-url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-5-tivi-man-hinh-phang-duoi-4-trieu-881469
+title = Màn hình máy tính PC uy tín chính hãng, giá rẻ | BH 3 năm
+url = https://www.dienmayxanh.com/man-hinh-may-tinh
 
 [dienthoaivui.com.vn]
 match = -207.1%%
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
 match = 0.0%%
