--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-29 01:48:29
+lastsearch = 2024-07-29 03:18:38
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -19,7 +19,7 @@ url = https://everon.vip/nem-everon-ceramic
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOopv_OXDOD9eqGPDzddVvjailrxSXnotw8tnVXFHPvMfe85k3fEZ
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [everonchinhhang.vn]
 match = -50.0%%
@@ -54,7 +54,7 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOoqjCx8mnOOjgrnuBWe_KafOwjtylTqeizPMRc3cWJc-5gL51VvD
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
 
 [ru9.vn]
 match = -150.0%%
