--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-29 01:32:23
+lastsearch = 2024-07-29 03:22:39
 
 [demxanh.com]
 match = -41.2%%
@@ -22,9 +22,9 @@ title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
 url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html
 
 [thegioidemviet.vn]
-match = -129.4%%
-title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
+match = -182.4%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
 match = -105.9%%
@@ -67,8 +67,8 @@ title = Những thông số kích thước thảm trải sàn thường dùng ch
 url = http://thamachau.vn/nhung-thong-so-kich-thuoc-tham-trai-san-thuong-dung
 
 [demtot.vn]
-match = 5.9%%
-title = Lưu trữ Thảm BALI trải sàn
+match = -182.4%%
+title = Lưu trữ Thảm BALI trải sàn - Chăn ga gối đệm thảm Trần Hậu
 url = https://demtot.vn/tham-nhap-khau
 
 [winmart.onl]
@@ -95,4 +95,9 @@ url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=http://xn--80apbkdj
 match = -105.9%%
 title = Thảm Trải Sàn Phòng Ngủ Dệt Febe BLANC ...
 url = https://sieuthinguyenkim.com/tham-trai-san-phong-ngu-det-nsh16223935090.html
+
+[azibai.net]
+match = -47.1%%
+title = Thảm Mashad 900 Red 160x230 cm - Azibai
+url = https://azibai.net/4118/29069/tham-mashad-900-red-160x230-cm?af_id=3ede8997de62ccaf4a051ecea6cf21fc
 
