CI images update

--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-29 00:44:45
+lastsearch = 2024-07-29 03:40:35
 
 [everon.online]
 match = 50.0%%
@@ -29,7 +29,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [vuanem.com]
 match = 17.6%%
 title = Bộ ga chun chần bốn mùa Everon 4 chi tiết màu ESM23012
-url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html?srsltid=AfmBOopBxcaGtXp__xr7yBchtaKD7o95JEODUc5uagSz-Gtb5zyk7vHr
+url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -64,7 +64,7 @@ url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
 [jysk.vn]
 match = -26.5%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp | JYSK
-url = https://jysk.vn/ga-chun-140x200cm?srsltid=AfmBOopaGySJqTQss9ev_fSvmuGLsfWLnitXxfviN76amicwAleLc-OM
+url = https://jysk.vn/ga-chun-140x200cm
 
 [anpha.vuanem.com]
 match = 0.0%%
