--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-28 16:47:58
+lastsearch = 2024-07-29 03:36:23
 
 [dongagroup.vn]
 match = -272.7%%
@@ -28,8 +28,8 @@ url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
 
 [tunhuamiennam.com]
 match = -245.5%%
-title = giường liền tủ nhựa cứng ecoplast cao cấp gec31
-url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30-2/
+title = giường liền tủ nhựa cứng ecoplast cao cấp gec30
+url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30/
 
 [giuongtang.mov.mn]
 match = -200.0%%
@@ -62,9 +62,9 @@ title = Giường bọc nệm HELEN 2
 url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
 
 [shopee.vn]
-match = -327.3%%
-title = Kệ Gỗ Đầu Giường Kệ 2 Tầng Đa Năng Trang Trí Nhà Cửa ...
-url = https://shopee.vn/Kệ-Gỗ-Đầu-Giường-Kệ-2-Tầng-Đa-Năng-Trang-Trí-Nhà-Cửa-Phong-Cách-Hiện-Đại-MN-65-i.414104565.22942150984
+match = -263.6%%
+title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường/1m2
 
 [3dwarehouse.sketchup.com]
 match = -136.4%%
@@ -87,9 +87,9 @@ title = Giường 2 M Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/giuong-2-m/?innerlink=hot_v1&page=2
 
 [tiki.vn]
-match = -200.0%%
-title = Giường 1m2 x 2m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=giường 1m2 x 2m
+match = -245.5%%
+title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
+url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
 match = -272.7%%
