--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-29 02:45:08
+lastsearch = 2024-07-29 03:40:55
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgjNJqn9&sig=ACfU3U1eqsvv_JXBIAgkoMpeFGKHE9etaw&hl=en&sa=X&ved=2ahUKEwicteCt0smHAxVlFzQIHQjABXMQ6AF6BAgaEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgjQMnna&sig=ACfU3U0IQSvmL75QvOvuen2sGR7phzC-1A&hl=en&sa=X&ved=2ahUKEwj4reKWzMqHAxU1ElkFHWKOBH0Q6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
