--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-29 02:10:08
+lastsearch = 2024-07-29 03:37:24
 
 [shopee.vn]
 match = -126.3%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOoq2ilwel5D3yBOwgT1497hfZOyKaAqIB_yOpD5zNAmKtVjX3R3b
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
 match = -110.5%%
