--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-29 00:58:33
+lastsearch = 2024-07-29 03:37:47
 
 [chieutrucsaigon.com]
-match = 33.3%%
-title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
+match = 16.7%%
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOoq_b-mvBRuRZby3jD8aRG1aydCy0nSLnCD9hQ-qeYQSVp7cluyB
 
 [chieutrelanlan.com]
-match = -70.8%%
-title = Giá chiếu trúc 8 tấc, 1m, 1m2, 1m6, 1m8 có trên thị trường
-url = https://chieutrelanlan.com/chieu-truc-voi-day-du-cac-size-cho-nguoi-doc-than-cho-ca-dai-gia-dinh-k16.html
+match = -66.7%%
+title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -59,7 +59,7 @@ url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 [www.lazada.vn]
 match = 20.8%%
 title = [HCM]Chiếu trúc 0,8m x 19m đến 2m
-url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html
+url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html?srsltid=AfmBOor-aFhBvR1soBgUnj-Hubcd66OdUBzUAvgTSgE5V9ACGCsKAfw4
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
