--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-29 01:39:50
+lastsearch = 2024-07-29 03:36:02
 
 [demxanh.com]
 match = -94.1%%
 title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
-url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
+url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html?srsltid=AfmBOoruz_1mezBgeRGYVLFDO9kpYuoZd_uX4niY4kVVQqYRGSekdt2l
 
 [chieutrelanlan.com]
 match = -58.8%%
