--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-29 03:37:47
+lastsearch = 2024-07-29 04:20:46
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,7 +14,7 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOoq_b-mvBRuRZby3jD8aRG1aydCy0nSLnCD9hQ-qeYQSVp7cluyB
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -59,7 +59,7 @@ url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 [www.lazada.vn]
 match = 20.8%%
 title = [HCM]Chiếu trúc 0,8m x 19m đến 2m
-url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html?srsltid=AfmBOor-aFhBvR1soBgUnj-Hubcd66OdUBzUAvgTSgE5V9ACGCsKAfw4
+url = https://www.lazada.vn/products/hcmchieu-truc-08m-x-19m-den-2m-i405120490.html
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
