--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-29 01:29:12
+lastsearch = 2024-07-29 04:36:00
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+match = -122.2%%
+title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
@@ -32,19 +32,19 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -72.2%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
+match = -150.0%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -77.8%%
 title = Bộ ga chun Cotton chống thấm màu xanh ngọc
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html?srsltid=AfmBOoofsT1X3TkhScUvtD3p1pqxYOiReOD8n95Ec4DXGGzIot-j1WRw
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
 match = -66.7%%
-title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOooD5kXCoESrGEjmCV25q3MFUV5F2W4RJifBHwVyLVZAhvdqAHCE
+title = Bộ ga phủ Passion A114 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a114
 
 [aeoneshop.com]
 match = -105.6%%
