--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-29 00:55:49
+lastsearch = 2024-07-29 04:32:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -173.3%%
+title = Hà Nội Riviu - Riviu.vn | Mai này em sẽ nấu cơm
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1464612030869195/
 
 [dieuhanhgiaothong-sgtvt.hochiminhcity.gov.vn]
 match = -126.7
@@ -97,9 +97,9 @@ title = D2 - Phát Triển Người Lãnh Đạo - Mục Sư Brian Houston
 url = https://quangharvest.com/isom-khoa-cap-4/d2-phat-trien-nguoi-lanh-dao-developing-leaders
 
 [www.youtube.com]
-match = -186.7%%
-title = TỔNG HỢP 15 MÓN NGON “ĐỨNG ĐẦU” CÁC QUẬN Ở SÀI ...
-url = https://www.youtube.com/watch?v=azJaFE1_w_k
+match = -80.0%%
+title = Đen x JustaTee - Đi Về Nhà (M/V)
+url = https://www.youtube.com/watch?v=vTJdVE_gjI0
 
 [rentapartment.vn]
 match = -153.3%%
@@ -127,8 +127,8 @@ title = Hội thi Tin học trẻ toàn quốc
 url = https://tinhoctre.vn/
 
 [capnuoctrungan.vn]
-match = -33.3%%
-title = Báo sự cố
+match = -160.0%%
+title = Báo sự cố - Công Ty Cổ Phần Cấp Nước Trung An
 url = https://capnuoctrungan.vn/Main/BaoSuCo/Create
 
 [dienbienphu.nhandan.vn]
@@ -232,8 +232,8 @@ title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
 [www.instagram.com]
-match = -226.7%%
-title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ ...
+match = -273.3%%
+title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ sữa và ...
 url = https://www.instagram.com/p/CFD27fHldDQ/
 
 [luatvietnam.vn]
@@ -249,7 +249,7 @@ url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-posta
 [agasound.vn]
 match = 6.7%%
 title = D2.15 - AGASOUND
-url = https://agasound.vn/d215
+url = https://agasound.vn/d215?p=5
 
 [nhiepanhdoisong.vn]
 match = -246.7%%
@@ -282,9 +282,9 @@ title = Camera không dây Hoco D2 ngoài trời, Độ phân giải 3 ...
 url = https://cungnhaulamgiau.vn/camera-khong-day-hoco-d2-ngoai-troi-do-phan-giai-3-trieu-full-hd-2304-1296-chong-nuoc-ipx65_p11512
 
 [uspharma.vn]
-match = -16.7%%
-title = Mosapride-US
-url = https://uspharma.vn/tieu-hoa--gan-mat--tieu-duong/mosapride-us/132-p136-735.aspx
+match = -18.2%%
+title = usnesin 500
+url = https://uspharma.vn/co--xuong-khop-/usnesin-500/132-p132-548.aspx
 
 [www.quansuvn.net]
 match = -20.0%%
