--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-29 03:18:18
+lastsearch = 2024-07-29 04:29:11
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,9 +17,9 @@ title = Đệm bông ép chính hãng giảm 50 ...
 url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
-match = -100.0%%
-title = Everhome 700 TC 100%% Egyptian Cotton Deep Fitted ...
-url = https://www.ebay.com/itm/256326842231
+match = -95.2%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep ...
+url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
 match = -123.8%%
