--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-29 01:51:57
+lastsearch = 2024-07-29 04:40:12
 
 [m.youtube.com]
 match = -144.4%%
@@ -27,9 +27,9 @@ title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
 url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -116.7%%
-title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
-url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
+match = -22.2%%
+title = Nuoc Cham Sauce Recipe Alissa
+url = https://www.tiktok.com/discover/nuoc-cham-sauce-recipe-alissa
 
 [www.youtube.com]
 match = -133.3%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -94.4%%
-title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
+match = -111.1%%
+title = Người Việt Bolsa/Orange County | NEM CHUA CHẢ HUẾ
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/nem-chua-chả-huế-2520-cái-chả-huế-mini-65-50-cái-sử-dụng-thịt-heo-tươi-chất-lượn/2894022880748076/
 
 [www.proz.com]
 match = -183.3%%
