--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-28 21:34:39
+lastsearch = 2024-07-29 04:44:01
 
 [ninhouse.vn]
 match = -246.2%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -153.8%%
-title = vỏ gối kê cổ giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
+match = -176.9%%
+title = vỏ gối màu đen giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối màu đen&urlold=bo-chan-ga-va-vo-goi-ke-soc-mau-den-phong-cach-bac-au/6918442302766223145/343220106741734172/ 
 
 [songhong.info]
 match = -161.5%%
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -38.5%%
-title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-ke-tim/
+match = -284.6%%
+title = Gối nằm, gối ngủ, gối kẻ, gối hơi gồm cả ruột gối và vỏ áo ...
+url = https://www.lazada.vn/products/goi-nam-goi-ngu-goi-ke-goi-hoi-gom-ca-ruot-goi-va-vo-ao-goi-loai-to-danh-cho-nguoi-lon-50-x70cm-cac-mau-ke-vai-cotton-han-quoc-i1568863340.html
 
 [flexhouse.vn]
 match = -207.7%%
