CI images update

--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-29 02:26:43
+lastsearch = 2024-07-29 05:36:44
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/?srsltid=AfmBOopRKx5egYGylx_g
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOop5EdbrLt8xQJrf0N3uIYakCnAS5Vi7btFurOlaXN2p5UehnKIv
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 44.4%%
 title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic?srsltid=AfmBOophhTjRipVkhYm_xM2ZzEXR1FQTxu5Vc881ysDn3JyfmSz8i_2Y
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
 match = -100.0%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html?srsltid=AfmBOoqO8TBXOjh9KNcaLGoOFaGUL5iTfGImGfOSaBnYLED_KNlfiWFg
+url = https://demxanh.com/vo-goi.html
 
 [templeshalom.ca]
 match = 0.0%%
