--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-29 03:37:24
+lastsearch = 2024-07-29 05:41:53
 
 [shopee.vn]
-match = -126.3%%
-title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
+match = -36.8%%
+title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -115.8%%
-title = Ca Nhạc Thiếu Nhi Vui Nhộn 🌞Bé Khoẻ Bé Ngoan 🎵 Em Bé ...
-url = https://www.youtube.com/watch?v=ZCV14D2HeDA
+match = -157.9%%
+title = ALIBABA - Bé Tú Anh | Nhạc Thiếu Nhi | Lời Việt: Lê Quốc ...
+url = https://www.youtube.com/watch?v=x-ljTpcenNg
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -107,8 +107,8 @@ title = Thơ Tuệ Sỹ - Tuệ Sỹ -Phạm Công Thiện Tác giả
 url = https://www.facebook.com/Thotuesi/posts/tuệ-sỹ-phạm-công-thiệntác-giả-tuệ-sỹkỷ-niệm-50-năm-sinh-nhật-tuệ-sỹ-buổi-chiều-n/1879653922298139/
 
 [huongtruc.com]
-match = -115.8%%
-title = Chiếu Trúc Tăm H&T - Công ty TNHH Sản xuất và thương ...
+match = -136.8%%
+title = Chiếu Trúc Tăm H&T - Công ty TNHH Sản xuất và thương mại ...
 url = https://huongtruc.com/chi-tiet/chieu-ht
 
 [chieutruc.info]
