--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-07-29 03:32:00
+lastsearch = 2024-07-29 05:33:16
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoq7ZtU0c3psYZ_fm4lTY3d4GankW_wk60xWd6PkaoROhL6Z4S7N
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = 13.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hoà
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOooH8ybA9yjIt19_2lmIYUj_nyInE3vX1SZVeEalEWaaxHjw3Ayx
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
 
 [tiki.vn]
 match = 40.0%%
