--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-29 04:32:59
+lastsearch = 2024-07-29 05:32:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -97,9 +97,9 @@ title = D2 - Phát Triển Người Lãnh Đạo - Mục Sư Brian Houston
 url = https://quangharvest.com/isom-khoa-cap-4/d2-phat-trien-nguoi-lanh-dao-developing-leaders
 
 [www.youtube.com]
-match = -80.0%%
-title = Đen x JustaTee - Đi Về Nhà (M/V)
-url = https://www.youtube.com/watch?v=vTJdVE_gjI0
+match = -220.0%%
+title = Tận 15 năm chơi game tôi mới biết Assassin đã như vậy ...
+url = https://www.youtube.com/watch?v=xrU9hh7M6js
 
 [rentapartment.vn]
 match = -153.3%%
@@ -249,7 +249,7 @@ url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-posta
 [agasound.vn]
 match = 6.7%%
 title = D2.15 - AGASOUND
-url = https://agasound.vn/d215?p=5
+url = https://agasound.vn/d215
 
 [nhiepanhdoisong.vn]
 match = -246.7%%
@@ -410,4 +410,9 @@ url = https://vnvc.vn/ba-bau-bi-sot-xuat-huyet/
 match = -140.0%%
 title = THOÁT KHỎI RANK RÁC RƯỞI - Counter-Strike 2
 url = https://steamcommunity.com/app/730/discussions/0/135508031957446252/
+
+[www.slideshare.net]
+match = -73.3%%
+title = Tóm tắt công thức vật lí 10 | PDF
+url = https://www.slideshare.net/slideshow/tm-tt-cng-thc-vt-l-10/13887451
 
