--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 01:49:25
+lastsearch = 2024-07-29 05:42:57
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,9 +62,9 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -106.2%%
@@ -212,9 +212,9 @@ title = Thông cáo báo chí Lễ công bố Quyết định của Thủ tướ
 url = https://www.yenbai.gov.vn/noidung/tintuc/Pages/chi-tiet-tin-tuc.aspx?ItemID=34469&l=Tintrongtinh
 
 [www.baodongthap.vn]
-match = -187.5%%
-title = Thủ tướng Phạm Minh Chính hội kiến Tổng thống Liên ...
-url = https://www.baodongthap.vn/chinh-tri/thu-tuong-pham-minh-chinh-hoi-kien-tong-thong-lien-bang-nga-vladimir-putin-123329.aspx
+match = -175.0%%
+title = Câu chuyện sợi lác sợi bố - Câu chuyện về Làng chiếu ...
+url = https://www.baodongthap.vn/suy-ngam/cau-chuyen-soi-lac-soi-bo-cau-chuyen-ve-lang-chieu-dinh-yen-116614.aspx
 
 [developers.cloudflare.com]
 match = -31.2%%
