--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-29 02:32:14
+lastsearch = 2024-07-29 05:37:05
 
 [www.everonvn.vn]
-match = 56.5%%
-title = Ruột gối Everon 45 x 65
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
+match = -34.5%%
+title = Ruột chăn gối Everon cao cấp & chính hãng, có khuyến ...
+url = https://www.everonvn.vn/san-pham/ruot-everon.html
 
 [happynest.vn]
 match = 3.4%%
@@ -32,14 +32,14 @@ title = Ruột gối everon 45x65 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ruột gối everon 45x65
 
 [thegioichanra.com]
-match = 6.9%%
-title = Ruột Gối Nằm Standard Everon Kích Thước 45×65 cm
-url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc-45x65-cm/
+match = 10.3%%
+title = Ruột Gối Nằm Classic Everon Kích Thước 45×65 cm
+url = https://thegioichanra.com/san-pham/ruot-goi-nam-classic-everon-kich-thuoc-45x65-cm/
 
 [everon.com.vn]
 match = 48.3%%
 title = RUỘT GỐI EVERON STANDARD SOFT
-url = https://everon.com.vn/ruot-goi-standard-soft/?srsltid=AfmBOorJ-j_R9tMDYnAZdzg8zOSBQ_S-OwGjUy2Q2Bqs1ebMTOeSWZXt
+url = https://everon.com.vn/ruot-goi-standard-soft/
 
 [suongtuyet.com]
 match = 13.8%%
