CI images update

--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-29 04:29:54
+lastsearch = 2024-07-29 05:49:57
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+14&source=bl&ots=rUQ6wrHB7-&sig=ACfU3U3w8gKUZ3H7ZChh1nWkWGgfSoQIHg&hl=en&sa=X&ved=2ahUKEwi_rtCW9cWHAxVVm4kEHZUVC4IQ6AF6BAg7EAM
+match = -182.4%%
+title = MACV: The Joint Command in the Years of Escalation, 1962-1967
+url = https://books.google.com/books?id=rbR68tUm1-gC&pg=PA154&lpg=PA154&dq=man+in+hoa+dep+14&source=bl&ots=i2BZVVlkXI&sig=ACfU3U3twdAlZoqtELHS_hx9h_poQYWMlg&hl=en&sa=X&ved=2ahUKEwiJ7NCC6cqHAxXOLEQIHWuPMcAQ6AF6BAg8EAM
 
 [www.house.gov]
 match = 11.8%%
@@ -480,4 +480,29 @@ url = https://statutes.capitol.texas.gov/Docs/WA/htm/WA.11.htm
 match = -200.0%%
 title = College Navigator - National Center for Education Statistics
 url = https://nces.ed.gov/collegenavigator/
+
+[www.pinterest.com]
+match = -152.9%%
+title = 100 Dragon Tattoo Designs: A Comprehensive Guide - Art
+url = https://www.pinterest.com/pin/292100725812835402/
+
+[calcivilrights.ca.gov]
+match = -147.1%%
+title = HARASSMENT PREVENTION GUIDE - Civil Rights Department
+url = https://calcivilrights.ca.gov/wp-content/uploads/sites/32/2022/09/Harassment-Prevention-Guide_Housing.pdf
+
+[www.justice.gov]
+match = -17.6%%
+title = joint_statement_ra.pdf
+url = https://www.justice.gov/sites/default/files/crt/legacy/2010/12/14/joint_statement_ra.pdf
+
+[www.montgomerycountymd.gov]
+match = -182.4%%
+title = County-Provided Recycling and Trash Holiday Collections ...
+url = https://www.montgomerycountymd.gov/dep/resources/files/trash-recycling/holidays/holiday-collection-schedule.pdf
+
+[www.puc.pa.gov]
+match = -105.9%%
+title = Responsible Utility Customer Protection Act
+url = https://www.puc.pa.gov/general/consumer_ed/pdf/Act201-Water.pdf
 
